se actualizaron imagenes y precios

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="galeria">
             <article class="oferta">
                 <div class="tarjeta__oferta">
-                    <img src="./herramientas/img/cocina/Pollo-al-verdeo_1400.jpg" alt="Pollo al verdeo" class="tarjeta__oferta--img">
+                    <img src="./herramientas/img/cocina/Pollo-al-verdeo_1400.png" alt="Pollo al verdeo" class="tarjeta__oferta--img">
                     <h2><a href="./pages/page-four.html">Pollo al verdeo</a></h2>
                     <p class="tarjeta__precio--oferta">$1.400</p>
                     <a href="./pages/page-four.html" class="oferta__btn"><p class="btn">Pedilo YA!!</p></a>
