--- a/pages/page-one.html
+++ b/pages/page-one.html
@@ -66,7 +66,7 @@
                 <article>
                     <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/chorizo-pomarola-1500.jpg" alt="chorizo a la pomarola"></div>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/chorizo-pomarola-1500.png" alt="chorizo a la pomarola"></div>
                     <p class="tarjeta__precio">$1500</p>
                     <h2>Chorizo a la pomarola</h2>
                 </div></a>
@@ -74,7 +74,7 @@
                 <article>
                     <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/milanesa-carne-pollo_1400.jpg" alt="milanesa de carne/pollo"></div>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/milanesa-carne-pollo_1400.png" alt="milanesa de carne/pollo"></div>
                     <p class="tarjeta__precio">$1400</p>
                     <h2>Mlanesa de carne/pollo</h2>
                 </div></a>
@@ -82,7 +82,7 @@
                 <article>
                     <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/Pollo-al-verdeo_1400.jpg" alt="Pollo al verdeo"></div>
+                            <div class="tarjeta__img"><img src="../herramientas/img/cocina/Pollo-al-verdeo_1400.png" alt="Pollo al verdeo"></div>
                     <p class="tarjeta__precio">$1400</p>
                     <h2>Pollo al verdeo</h2>
                 </div></a>
