--- a/pages/page-two.html
+++ b/pages/page-two.html
@@ -48,91 +48,67 @@
         <h2>Nuestros platos</h2>
             <div class="scroll">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/brownie-chocotorta_4400.jpg" alt="Browniede chocotorta"></div>
                     <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                    <h2>Brownie de chocotorta</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/brownie-clasico_3400.jpg" alt="Brownie clasic"></div>
+                    <p class="tarjeta__precio">$3.400</p>
+                    <h2>Brownie clasico</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/brownie-frutilla_4600.jpg" alt="Brownie de frutilla"></div>
+                    <p class="tarjeta__precio">$4.600</p>
+                    <h2>Brownie de frutilla</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/brownie-frutos-rojos_5500.jpg" alt="Brownie de frutos rojos"></div>
+                    <p class="tarjeta__precio">$5.500</p>
+                    <h2>Brownie de frutos rojos</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/brownie-oreo_4400.jpg" alt="Brownie de oreo"></div>
                     <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                    <h2>Brownie de oreo</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/ganache_3400.jpg" alt="Ganache"></div>
+                    <p class="tarjeta__precio">$3.400</p>
+                    <h2>Ganache</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/key-lemon-pie_6900.jpg" alt="Key lemon pie"></div>
+                    <p class="tarjeta__precio">$6.900</p>
+                    <h2>Key lemon pie</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria/marquise_4000.jpg" alt="Marquise de chocolate y dulce de leche"></div>
+                    <p class="tarjeta__precio">$4.000</p>
+                    <h2>Marquise de chocolate y dulce de leche</h2>
                 </div></a>
                 </article>
         </section>
@@ -140,104 +116,55 @@
             <h2>Platos Veganos</h2>
             <div class="scroll">
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/carrot-cake-vegana_4000.jpg" alt="Carrot cake"></div>
+                    <p class="tarjeta__precio">$4.000</p>
+                    <h2>Carrot cake</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/layer-cake-vainilla-chocolate-veg-5000.jpg" alt="Layer cake de vainilla y chocolate"></div>
+                    <p class="tarjeta__precio">$5.000</p>
+                    <h2>Layer cake de vainilla y chocolate</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/pastel-moras-veg_5800.jpg" alt="Pastel de moras"></div>
+                    <p class="tarjeta__precio">$5.800</p>
+                    <h2>Pastel de moras</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/tarta-fresa-veg_5500.jpg" alt="Tarta de fresas"></div>
+                    <p class="tarjeta__precio">$5.500</p>
+                    <h2>Tarta de fresas</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/torta-banana-veg-4900.jpg" alt="Torta de banana"></div>
+                    <p class="tarjeta__precio">$4.900</p>
+                    <h2>Torta de banana</h2>
                 </div></a>
                 </article>
                 <article>
-                    <a href="">
+                    <a href="./pages/page-four.html">
                         <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
-                </div></a>
-                </article>
-                <article>
-                    <a href="">
-                        <div class="tarjeta">
-                            <div class="tarjeta__img"><img src="./herramientas/img/torta-oreo.jpg" alt=""></div>
-                    <p class="tarjeta__precio">$4.400</p>
-                    <h2>Barritas de leche condensada vegana y chocolate con tortilla de chocolate</h2>
+                            <div class="tarjeta__img"><img src="../herramientas/img/pasteleria-veg/torta-chocolate-veg_5200.jpg" alt="Torta de chocolate vegano"></div>
+                    <p class="tarjeta__precio">$5.200</p>
+                    <h2>Torta de chocolate vegano</h2>
                 </div></a>
                 </article>
         </section>
-
-
-
-
-
-
-        
     </main>
-
-
     <footer>
         <hr>
         <div class="footer__info">
